[package]
name = "my_app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.6"
log = "0.4.14"
# vertigo = "0.1.0-alpha.3"
# vertigo-html = "0.1.0-alpha.3"
# vertigo-browserdriver = "0.1.0-alpha.3"
vertigo = { git = "https://github.com/vertigo-web/vertigo.git" }
vertigo-browserdriver = { git = "https://github.com/vertigo-web/vertigo.git" }
vertigo-html = { git = "https://github.com/vertigo-web/vertigo.git" }
wasm-bindgen = { version = "0.2.74", features = ["nightly"] }
wasm-bindgen-futures = "0.4.24"
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"
