[package]
name = "my_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
vertigo = "0.1.0-beta.1"
vertigo-browserdriver = "0.1.0-beta.1"
wasm-bindgen = { version = "0.2.78" }
wasm-bindgen-futures = "0.4.28"
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"
